[package]
name = "rp-matter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[profile.dev]
debug = true
opt-level = 3

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
embassy-net = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-w5500 = { git = "https://github.com/embassy-rs/embassy" }

[dependencies]
rs-matter = { git = "https://github.com/project-chip/matter-rs", default-features = false, features = ["rustcrypto", "embassy-net"] }
embassy-embedded-hal = { version = "0.1", features = [] }
embassy-rp = { version = "0.1", features = ["unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1" }
embassy-usb-logger = { version = "0.1" }
embassy-executor = { version = "0.2", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.1", features = ["nightly", "unstable-traits"] }
embassy-net = { version = "0.1", features = ["nightly", "dhcpv4"] }
embassy-net-driver = "0.1"
embassy-net-w5500 = { version = "0.1" }
embassy-futures = { version = "0.1" }
smoltcp = { version = "0.10", default-features = false }
portable-atomic = { version = "1", features = ["critical-section"] }
fixed = "1.23.1"
fixed-macro = "1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal-async = "0.2.0-alpha.2"
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
rand = { version = "0.8.5", default-features = false }

# For crypto_rustcrypto, until the remaining set of small allocations are fixed upstream
embedded-alloc = "0.5" 

#defmt = "0.3"
#defmt-rtt = "0.4"
#panic-probe = { version = "0.3" }
#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
